// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Productimage debe de mostrar el componente con la imagen por defecto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`Productimage debe de mostrar el componente correctaent con la url de la imagen personalizado 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="http://images.jpg"
/>
`;
